Se Hacen multiples correcciones a WPOS
- Se agregan nuevas columnas y campos a la ventana "Terminal PDV"
- Se corrige Problema al hacer el pago en el POS, queda transaccion
abierta
- Se corrigen warnings sobre uso de metodos deprecados
- Se corrigen clases que implementan "EventListiner"
- Se corrige seteo de Via de Entrega, se estaba seteando
"Transportista", causando error de Transportista obligatorio, se setea
Via de entrega: "Entrega"